...
        static let starFilled = "star.fill"
        static let noBackdropPhoto = "xmark.rectangle"
    }
    
    @IBOutlet weak var movieTitle: UILabel! {
        didSet {
            movieTitle.accessibilityIdentifier = "movieCell_title"
        }
    }
    @IBOutlet weak var movieOverview: UILabel!
    @IBOutlet weak var movieBackdrop: UIImageView!
    @IBOutlet weak var addToFavourites: UIButton! {
        didSet {
            addToFavourites.accessibilityIdentifier = "movieCell_addToFavourites"
        }
    }
    
    var movie: Movie?
    
    override func awakeFromNib() {
...
