...
    @IBOutlet weak var titleLabel: UILabel!
    @IBOutlet weak var releaseDateLabel: UILabel!
    @IBOutlet weak var scoreLabel: UILabel!
    @IBOutlet weak var overviewLabel: UILabel!
    @IBOutlet weak var scrollView: UIScrollView! {
        didSet{
            scrollView.accessibilityIdentifier = "detailsScreen_scrollView"
        }
    }
    
    var viewModel: DetailsScreenViewModel?
    
    override func viewWillAppear(_ animated: Bool) {
...
    private func refreshFavouritesButton() {
        let addToFavouritesButton = UIBarButtonItem(image: UIImage(systemName: viewModel?.movie.isFavourite ?? false ? "star.fill" : "star"),
                                                    style: .done,
                                                    target: self,
                                                    action: #selector(addToFavourites))
        
        addToFavouritesButton.accessibilityIdentifier = "detailsScreen_addToFavourites"
        self.navigationItem.rightBarButtonItem = addToFavouritesButton
    }
}

