...
    
    let navigationController = UINavigationController()
    let networkManager = NetworkManager()
    
    func start() -> UINavigationController {
        
        self.navigationController.navigationBar.accessibilityIdentifier = "navBar"
        if let viewController = Bundle.main.loadNibNamed(Constants.mainScreenView, owner: nil, options: nil)?.first as? MainScreenViewController {
            viewController.viewModel = MainScreenViewModel(coordinator: self,
                                                           networkManager: networkManager)
            navigationController.pushViewController(viewController, animated: true)
        }
        return navigationController
...
